--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <h2 class="text-lg font-semibold text-gray-800 mb-2">Cara Penggunaan</h2>
           <iframe
             class="youtube-embed"
-            src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+            src="https://youtu.be/nUbg0-QMHeA?feature=shared"
             title="Cara Menggunakan APAR"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
