--- a/index.html
+++ b/index.html
@@ -43,14 +43,7 @@
         <!-- Video -->
         <div class="mb-6">
           <h2 class="text-lg font-semibold text-gray-800 mb-2">Cara Penggunaan</h2>
-          <iframe
-            class="youtube-embed"
-            src="https://youtu.be/nUbg0-QMHeA?feature=shared"
-            title="Cara Menggunakan APAR"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen>
-          </iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/qS1IfnVLNJ8?si=yZnDt7NkdDlYQvJ1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
 
         <!-- Info -->
